2007-05-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Added some warning options for g++ 4.2.0
 doc/libpqxx.xml, include/pqxx/connection_base.hxx, include/pqxx/pqx,
 src/connection_base.cxx, test/test004.cxx, test/test023.cxx,
 test/test078.cxx, test/test079.cxx, test/test087.cxx:
  - Renamed trigger to notify_listener
 include/pqxx/notify-listen, include/pqxx/notify-listen.hxx:
  - New
 include/pqxx/trigger, include/pqxx/trigger.hxx:
  - Marked as obsolete
 VERSION:
  - Proceeding to 3.0.0
2007-05-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, include/pqxx/transaction_base.hxx:
  - More explanation, particularly on exceptions.  Thanks Gary Jefferson.
2007-05-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection.cxx:
  - Pass on more error messages in broken_connection exceptions, thanks JuJu
2007-05-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Removed unnecessary retrieval of error message, thanks JuJu
  - Moved code around a bit
2007-05-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/compiler-public.hxx, win32/INSTALL.txt:
  - Define PQXX_PQ_STATIC to link to static libpq in Windows.  Thanks JuJu.
2007-05-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/robusttransaction.cxx:
  - Fixed constraint name clash in multi-user use, thanks anonymous
 test/test092.cxx:
  - Test "one parameter per line" style of invoking prepared statements
2007-04-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/prepared_statement.hxx:
  - m_statement shouldn't be a reference, thanks John Mudd
2007-04-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/result.cxx:
  - Missing include: cstdlib, thanks Martin Michlmayr
2007-03-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/tablewriter.hxx:
  - A bit more explanation about column lists
2007-02-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Compile fix for libpq without PQserverVersion()
2007-02-11  Jeroen T. Vermeulen <jtv@xs4all.nl>