@@ -7,7 +7,7 @@
  *      Various utility definitions for libpqxx
  *      DO NOT INCLUDE THIS FILE DIRECTLY; include pqxx/util instead.
  *
- * Copyright (c) 2001-2006, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2001-2007, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  * See COPYING for copyright license.  If you did not receive a file called
  * COPYING with this source code, please notify the distributor of this mistake,
@@ -41,7 +41,7 @@
  * The latest information, as well as updates, a mailing list, and a bug
  * reporting system can be found at the project's home page.
  *
- * @see http://thaiopensource.org/development/libpqxx/
+ * @see http://pqxx.org/
  */
 
 /** @page threading Thread safety
