@@ -1,6 +1,8 @@
 3.0.0
+ - Website is now at http://pqxx.org/ (no redirects)
  - More helpful error messages on failed connections
  - trigger is now called notify_listener, trigger header is now notify-listen
+ - Many nasty corner cases in cursor position accounting fixed
  - New mixin base class pqxx_exception distinguishes libpqxx exception types
  - Several build problems with Visual C++ fixed
  - Uses strlcpy() where available, instead of strncpy()
